Fixed Bug: Modal scrolles out of view

--- a/css/popup.css
+++ b/css/popup.css
@@ -13,7 +13,7 @@
 
 #modal {
   transition: all 0.3s ease-out;
-  position: absolute;
+  position: fixed;
   transform: translate(-50%, -50%);
   top: 60%;
   left: 50%;
